; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/nullfs/extr_null_vfsops.c_nullfs_reclaim_lowervp.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/nullfs/extr_null_vfsops.c_nullfs_reclaim_lowervp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mount = type { i32 }
%struct.vnode = type { i32 }
%struct.TYPE_2__ = type { i32 }

@NULLV_NOUNLOCK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mount*, %struct.vnode*)* @nullfs_reclaim_lowervp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nullfs_reclaim_lowervp(%struct.mount* %0, %struct.vnode* %1) #0 {
  %3 = alloca %struct.mount*, align 8
  %4 = alloca %struct.vnode*, align 8
  %5 = alloca %struct.vnode*, align 8
  store %struct.mount* %0, %struct.mount** %3, align 8
  store %struct.vnode* %1, %struct.vnode** %4, align 8
  %6 = load %struct.mount*, %struct.mount** %3, align 8
  %7 = load %struct.vnode*, %struct.vnode** %4, align 8
  %8 = call %struct.vnode* @null_hashget(%struct.mount* %6, %struct.vnode* %7)
  store %struct.vnode* %8, %struct.vnode** %5, align 8
  %9 = load %struct.vnode*, %struct.vnode** %5, align 8
  %10 = icmp eq %struct.vnode* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  br label %23

12:                                               ; preds = %2
  %13 = load i32, i32* @NULLV_NOUNLOCK, align 4
  %14 = load %struct.vnode*, %struct.vnode** %5, align 8
  %15 = call %struct.TYPE_2__* @VTONULL(%struct.vnode* %14)
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = or i32 %17, %13
  store i32 %18, i32* %16, align 4
  %19 = load %struct.vnode*, %struct.vnode** %5, align 8
  %20 = call i32 @vgone(%struct.vnode* %19)
  %21 = load %struct.vnode*, %struct.vnode** %5, align 8
  %22 = call i32 @vput(%struct.vnode* %21)
  br label %23

23:                                               ; preds = %12, %11
  ret void
}

declare dso_local %struct.vnode* @null_hashget(%struct.mount*, %struct.vnode*) #1

declare dso_local %struct.TYPE_2__* @VTONULL(%struct.vnode*) #1

declare dso_local i32 @vgone(%struct.vnode*) #1

declare dso_local i32 @vput(%struct.vnode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
